manifests/docker-registry/distribution.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: distribution
  labels:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: distribution
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: docker-registry
      app.kubernetes.io/component: distribution
  ingress:
  - toPorts:
    - ports:
      - port: "5000"
    fromEntities:
    - all
  egress:
  - toPorts:
    - ports:
      - port: "6379"
    toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": redis
        app.kubernetes.io/name: redis
        app.kubernetes.io/component: redis
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: distribution
  labels:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: distribution
  annotations:
    app.kubernetes.io/name: docker-registry
    cert-manager.io/issuer: cluster.acmeProvider.issuer
    cert-manager.io/issuer-kind: cluster.acmeProvider.kind
    cert-manager.io/issuer-group: cluster.acmeProvider.group
spec:
  tls:
  - hosts: [cr.DOMAIN]
    secretName: cr-tls
  rules:
  - host: cr.DOMAIN
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: distribution
            port:
              name: web
---
apiVersion: v1
kind: Service
metadata:
  name: distribution
  labels:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: distribution
spec:
  selector:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: distribution
  ports:
  - name: web
    port: 5000
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: distribution
  labels:
    app.kubernetes.io/name: docker-registry
    app.kubernetes.io/component: distribution
spec:
  serviceName: distribution
  selector:
    matchLabels:
      app.kubernetes.io/name: docker-registry
      app.kubernetes.io/component: distribution
  template:
    metadata:
      labels:
        app.kubernetes.io/name: docker-registry
        app.kubernetes.io/component: distribution
    spec:
      containers:
      - name: distribution
        image: distribution/distribution:2.8.3
        securityContext:
          readOnlyRootFilesystem: true
        ports:
        - name: web
          containerPort: 5000
        livenessProbe:
          httpGet:
            path: /
            port: web
          failureThreshold: 20
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: web
          failureThreshold: 20
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 368Mi
          limits:
            memory: 768Mi
        volumeMounts:
        - name: home-cluster
          mountPath: /etc/docker/registry/config.yml
          subPath: config/docker/distribution.yaml
          readOnly: true
        - name: jwt-cert
          mountPath: /etc/docker/auth/jwt.crt
          subPath: tls.crt
        - name: data
          mountPath: /var/lib/registry
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      volumes:
      - name: home-cluster
        nfs:
          server: nfsShares.homeCluster.addr
          path: nfsShares.homeCluster.path
          readOnly: true
      - name: jwt-cert
        secret:
          secretName: distribution-jwt-cert
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      storageClassName: nas-nfs-workloads
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: 5Gi
